eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: galaxy-controller-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: galaxy-controller
